--- a/_posts/2015-09-04-Love-Is.md
+++ b/_posts/2015-09-04-Love-Is.md
@@ -10,6 +10,25 @@ description: 「Ti voglio bene.」
 
 ---
 
+
+```cpp
+// added a public member function to StrBlob and StrBlobPrts
+long count() {
+    return data.use_count(); // and wptr.use_count();
+}
+
+// test codes in main()
+StrBlob str({ "hello", "world" });
+std::cout << "before: " << str.count() << std::endl; // 1
+StrBlob str_cp(str);
+std::cout << "after: " << str.count() << std::endl;  // 2
+
+ConstStrBlobPtr p(str);
+std::cout << "before: " << p.count() << std::endl; // 2
+ConstStrBlobPtr p_cp(p);
+std::cout << "after: " << p.count() << std::endl; // 2
+```
+
 区分「爱上」和「爱」  这可不完全是一回事  而是强烈程度和持续时间的问题。有点儿像电子游戏：先是爱上了游戏的头一关  紧接着一关又一关地过  爱就变得越来越深  越来越强烈  越来越持久了。
 
 可这还是很复杂呀！爱上不一定是爱吗？
